# eventlog-prometheus

./: eventlog-prometheus.cabal  stack.yaml
app/: Main.hs
src/GHC/Eventlog/: Prometheus.hs
