cabal-version: 3.0
name:          eventlog-prometheus

-- GENERATED HEADER START
version:    1.34.0
maintainer: SimSpace
copyright:  2020 SimSpace Corp

-- license:        AllRightsReserved

common global-options
  -- By default, use these ghc-options in all components.
  ghc-options:
    -Wall -fwarn-tabs -Wincomplete-uni-patterns
    -Werror=missing-home-modules -eventlog -O0 +RTS -A32M -RTS

  default-language: Haskell2010

common global-exe-options
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T"
-- GENERATED HEADER END

library
    import: global-options
    exposed-modules:  GHC.Eventlog.Prometheus

    build-depends:    base >= 4.13 && < 4.16
                    , eventlog-socket
                    , prometheus
                    , array
                    , text
                    , unix
                    , network
                    , ghc-events
                    , bytestring

    hs-source-dirs:   src
    default-language: Haskell2010

executable eventlog-prometheus-test
  import: global-options, global-exe-options
  main-is: Main.hs
  build-depends: base, eventlog-prometheus
  default-language: Haskell2010
  hs-source-dirs: app
  ghc-options: -with-rtsopts=-l